--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,13 @@ jobs:
 
     runs-on: windows-latest
 
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+      
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
