--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         dotnet-version: 9.x.x
     - name: Publish
-      run: ./publish.sh
+      run: dotnet publish -c Release -r win-x64 -p:PublishSingleFile=true -p:DebugType=None -p:DebugSymbols=false --self-contained true -p:AssemblyName=csv-package-list -o out
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
