--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
       with:
          type: 'zip'
          filename: 'csv-package-list-${{ matrix.target }}.zip'
-         directory: out/${{ matrix.target }}
+         directory: ./out/${{ matrix.target }}
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
