--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,15 +35,8 @@ jobs:
     - name: Publish
       run: dotnet publish -c Release -p:AssemblyName=csv-package-list --property:PublishDir=out/${{ matrix.target }} -r ${{ matrix.target }} -p:PublishSingleFile=true -p:DebugType=None -p:DebugSymbols=false --self-contained true 
 
-    - name: Archive Release
-      uses: thedoctor0/zip-release@main
-      with:
-         type: 'zip'
-         filename: 'csv-package-list-${{ matrix.target }}.zip'
-         directory: ./out/${{ matrix.target }}
-
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-          name: artifacts
-          path: csv-package-list-${{ matrix.target }}.zip
+          retention-days: 2
+          path: out/${{ matrix.target }}
