--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     permissions:
-      contents: write
+      contents: read
       
     steps:
     - uses: actions/checkout@v4
@@ -38,34 +38,44 @@ jobs:
     - name: Publish
       run: dotnet publish -c Release -p:AssemblyName=csv-package-list --property:PublishDir=out/${{ matrix.target }} -r ${{ matrix.target }} -p:PublishSingleFile=true -p:DebugType=None -p:DebugSymbols=false --self-contained true 
 
+    - name: Archive Release
+      uses: thedoctor0/zip-release@0.7.6
+      with:
+        type: 'tar'
+        filename: 'csv-package-list-${{ matrix.target }}'
+        directory: ${{ github.workspace }}/src/out/${{ matrix.target }}
+        
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-          retention-days: 2
+          retention-days: 1
           path: ${{ github.workspace }}/src/out/${{ matrix.target }}
-          name: csv-package-list-${{ matrix.target }}
+          name: artifacts
   
   release:
     needs: [build]
     runs-on: ubuntu-latest
-    steps:
 
-    - name: Checkout
-      uses: actions/checkout@v4
+    permissions:
+      contents: write
+    
+    steps:
+    - uses: actions/checkout@v4
       
     - name: Download Artifacts 
       uses: actions/download-artifact@v4
       with:
-          pattern: csv-package-list-*
+          name: artifacts
           path: ${{ github.workspace }}/artifacts
           merge-multiple: 'true'
-    
-    - name: LS
+
+    # TODO
+    - name: LS 
       run: ls -R ${{ github.workspace }}/artifacts
         
     - name: Create Release
       uses: ncipollo/release-action@v1.16.0
       with:
         allowUpdates: true 
-        artifacts: ${{ github.workspace }}/csv-package-list-*
+        artifacts: ${{ github.workspace }}/artifacts
         tag: ${{ github.run_number }}
