--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Download Artifacts 
       uses: actions/download-artifact@v4
       with:
-          name: artifacts-*
+          pattern: artifacts-*
           path: ${{ github.workspace }}/artifacts
           merge-multiple: 'true'
 
