--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,7 +60,7 @@ jobs:
       contents: write
     
     steps:
-    - uses: actions/checkout@v4
+    # - uses: actions/checkout@v4
       
     - name: Download Artifacts 
       uses: actions/download-artifact@v4
