--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
           retention-days: 1
-          path: ${{ github.workspace }}/src/out/${{ matrix.target }}
+          path: ${{ github.workspace }}/src/out/${{ matrix.target }}.zip
           name: artifacts-${{ matrix.target }}-${{ github.run_number }}
   
   release:
@@ -60,8 +60,6 @@ jobs:
       contents: write
     
     steps:
-    # - uses: actions/checkout@v4
-      
     - name: Download Artifacts 
       uses: actions/download-artifact@v4
       with:
