--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,6 +71,7 @@ jobs:
       uses: ncipollo/release-action@v1.16.0
       with:
         allowUpdates: true 
+        generateReleaseNotes: true
         artifacts: ${{ github.workspace }}/artifacts/*.zip
         tag: 1.0.0.${{ github.run_number }}
         name: 1.0.0.${{ github.run_number }}
